Tue Oct 06 2009   "Patrick Näf" <herzbube@herzbube.ch>
- [tests] added "test" command to setup.py
- [tests] added unit test modules with dummy implementations
- [internal] added build configurations for a couple of different platforms to
  setup.py
- [internal] changed project folder structure (added doc and src folders)
- [internal] extension is now built by default into src/packages/aprmd5.so

Sat Jun 20 2009   "Patrick Näf" <herzbube@herzbube.ch>
- rewrite of project description in README + setup.py

Tue Jun 16 2009   "Patrick Näf" <herzbube@herzbube.ch>
- implement remaining functions

Sun Jun 14 2009   "Patrick Näf" <herzbube@herzbube.ch>
- write a version of aprmd5.c for Python 2.6

Thu Jun 04 2009   "Patrick Näf" <herzbube@herzbube.ch>
- initial project structure
- prototype implementations that wrap apr_md5() and apr_md5_encode()