@@ -30,8 +30,46 @@ from aprmd5 import md5_encode
 class MD5EncodeTest(unittest.TestCase):
     """Exercise aprmd5.md5_encode()"""
 
-    def testDummy(self):
-        pass
+    def testNormal(self):
+        password = "foo"
+        salt = "mYJd83wW"
+        expectedResult = "$apr1$mYJd83wW$IO.6aK3G0d4mHxcImhPX50"
+        result = md5_encode(password, salt)
+        self.assertEqual(result, expectedResult)
+
+    def testPasswordIsEmptyString(self):
+        password = ""
+        salt = "7n4Iu7Bq"
+        expectedResult = "$apr1$7n4Iu7Bq$jsH1cRc.tyRPvJpZjxUjV."
+        result = md5_encode(password, salt)
+        self.assertEqual(result, expectedResult)
+
+    def testPasswordIsNone(self):
+        password = None
+        salt = "7n4Iu7Bq"
+        self.assertRaises(TypeError, md5_encode, password, salt)
+
+    def testSaltIsEmptyString(self):
+        password = "foo"
+        salt = ""
+        expectedResult = "$apr1$$vGRl2mLvDG8pptkZ9Cyum."
+        result = md5_encode(password, salt)
+        self.assertEqual(result, expectedResult)
+
+    def testSaltIsLongerThan8Characters(self):
+        # Same password as in testNormal()
+        password = "foo"
+        # Same salt as in testNormal(), but with added characters
+        salt = "mYJd83wW9876543210"
+        # Same result as in testNormal
+        expectedResult = "$apr1$mYJd83wW$IO.6aK3G0d4mHxcImhPX50"
+        result = md5_encode(password, salt)
+        self.assertEqual(result, expectedResult)
+
+    def testSaltIsNone(self):
+        password = "foo"
+        salt = None
+        self.assertRaises(TypeError, md5_encode, password, salt)
 
 
 if __name__ == "__main__":
