@@ -1,3 +1,6 @@
+Tue Oct 07 2009   "Patrick Näf" <herzbube@herzbube.ch>
+- [tests] implemented unit tests
+
 Tue Oct 06 2009   "Patrick Näf" <herzbube@herzbube.ch>
 - [tests] added "test" command to setup.py
 - [tests] added unit test modules with dummy implementations
